--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/nextjs": "4.29.12",
+    "@clerk/nextjs": "^6.32.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
@@ -47,7 +47,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^15.5.3",
     "next-themes": "^0.4.6",
     "prisma": "^6.15.0",
     "react": "19.1.0",
